--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@ rel="stylesheet">
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     
-    <title>minitown-munches</title>
+    <title>minitown-muncheS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
